# novaclips

./: .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml  pyrefly.toml  requirements.txt  test_upload_with_description.py  test_vision.py  verify_uniquification.py  verify_upload.py
.agent/: user-preferences.md
.agent/rules/: novaclips.mdc  openspec.md  project_context.md
.agent/skills/video-screenshots/: SKILL.md
data/audio/LLMs-explained/: LLMs-explained.srt  tts_input.txt
docs/: automation-modules.md  idea.txt  koden-obscure.md  modules.md  mvp-plan.md  mvp.md  plan-gpt-1.md  plan-gpt-2.md  production-plan-en.md  production-plan-ru.md  prompts.txt  qa-uniquification.md  requirements.md  script-generation-workflow.md  tech.md  visual-generation-flow-ru.md  Темы. Creating faceless clips for YouTube.md
docs/modules/: audio-timestamp-extractor.md  audio-tts-engine.md  core-project.md  subtitles-generator.md  subtitles-karaoke.md  utils-ffmpeg-wrapper.md  video-compositor.md  visuals-image-generator.md
novaclips/: config.py  main.py
novaclips/core/: dao.py  db.py  models.py  schema.sql
openspec/: AGENTS.md  project.md
scripts/: add_shot_refs.py  assemble_video.py  convert_shots_to_js.py  edge_tts.py  fix_shot_refs.py  generate_scenario_images.py  normalize_audio.py  text_to_speech.py
src/lib/: google_imagen.py
tests/: README_subtitle_tests.md  test_auto_optimal.py  test_cpu_performance.py  test_full_pipeline.py  test_google_gen.py  test_quick_optimize.py  test_subtitle_optimization.py  test_subtitle_recognition.py
(+55 files in other folders)
